# meralus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/animation/: Cargo.toml
crates/animation/src/: lib.rs  player.rs  value.rs
crates/animation/src/curves/: elastic.rs  interval.rs  mod.rs  split.rs  three_point_cubic.rs
crates/app/: Cargo.toml
crates/app/resources/models/: cuboid.json  cuboid_all_same.json  dirt.json  grass_block.json
crates/app/resources/shaders/: common_fragment.glsl  common_vertex.glsl  rectangle.fs  rectangle.vs  shape.fs  shape.vs  text.fs  text.vs  voxel.fs  voxel.vs
crates/app/resources/states/: grass_block.json
crates/app/shaders/: block_fragment.glsl  block_vertex.glsl
crates/app/src/: aabb.rs  block.rs  blocks.rs  camera.rs  clock.rs  face.rs  game.rs  keyboard.rs  main.rs  mesh.rs  player.rs  raycast.rs  transform.rs  ui.rs  util.rs
crates/app/src/loaders/: block.rs  block_model.rs  mod.rs  texture.rs
crates/app/src/renderers/: mod.rs  shape.rs  text.rs  voxel.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/meshing/: Cargo.toml
crates/meshing/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: color.rs  lerp.rs  lib.rs
crates/shared/src/network/: client.rs  mod.rs  packet.rs  protocol.rs  server.rs
crates/world/: Cargo.toml
crates/world/src/: chunk.rs  chunk_manager.rs  lib.rs
crates/world/src/block/: face.rs  mod.rs  state.rs
