[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"
must_use_candidate = { level = "allow", priority = 1 }

[workspace.dependencies]
meralus-animation = { path = "./crates/animation" }
meralus-world = { path = "./crates/world" }
meralus-engine = { path = "./crates/engine" }
meralus-shared = { path = "./crates/shared" }

glium = "0.36.0"

glam = { version = "0.27.0", features = ["serde"] }
glamour = "0.11.0"

noise = "0.9.0"
splines = { version = "5.0.0", features = ["glam"] }

futures = { version = "0.3.31", features = ["std"] }
tokio = { version = "1.45.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "fs",
    "sync",
    "parking_lot",
    "net",
    "io-util",
] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tokio-serde = "0.9.0"
async-compression = { version = "0.4.23", features = ["zlib", "tokio"] }
bson = "2.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
