[package]
name = "meralus-app"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { workspace = true }
async-compression = { workspace = true }
meralus-world = { workspace = true }
meralus-engine = { workspace = true }
meralus-shared = { workspace = true }
noise = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
clap = { version = "4.5.35", features = ["derive"] }
image = "0.25.6"
owo-colors = "4.2.0"

[lints]
workspace = true
