[package]
name = "meralus-app"
version = "0.1.0"
edition = "2024"

[dependencies]
meralus-animation = { workspace = true }
meralus-world = { workspace = true }
meralus-engine = { workspace = true }
meralus-shared = { workspace = true, features = ["network"] }
glam = { workspace = true }
glamour = { workspace = true }
noise = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-compression = { workspace = true }
clap = { version = "4.5.35", features = ["derive"] }
image = "0.25.6"
fontdue = { version = "0.9.3", features = ["std"] }
owo-colors = "4.2.0"

[lints]
workspace = true
