[package]
name = "meralus-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { workspace = true }
tokio = { workspace = true }
meralus-world = { workspace = true }
meralus-shared = { workspace = true }
glam = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
