[package]
name = "meralus-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
glam = { workspace = true }
tokio = { workspace = true }
bson = { workspace = true }
tokio-util = { workspace = true }
tokio-serde = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
