[package]
name = "meralus-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { workspace = true }
glamour = { workspace = true }
serde = { workspace = true, optional = true }
bson = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tokio-serde = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[features]
default = []
network = [
    "dep:serde",
    "dep:bson",
    "dep:tokio",
    "dep:tokio-util",
    "dep:tokio-serde",
    "dep:futures",
]

[lints]
workspace = true
